[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vid2led"
version = "0.1.2"
description = "Command line tool to play videos on WS281x LED matrices"
authors = [
    {name = "Will McGloughlin"}
]
license = {file="LICENSE"}
dependencies = [
    "opencv-python",
    "rpi-ws281x"
]

[project.urls]
homepage = "https://github.com/wymcg/vid2led"
documentation = "https://github.com/wymcg/vid2led"
repository = "https://github.com/MartinThoma/wymcg/vid2led"

[project.scripts]
vid2led = "vid2led.cli:main"
