[tool.poetry]
name = "vid2led"
version = "0.1.3"
description = "A command line tool to play videos on WS281x LED matrices"
authors = ["Will McGloughlin <willem.mcg@gmail.com>"]
license = "LICENSE"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
opencv-python = "^4.7.0.68"
rpi-ws281x = { version = "^4.3.4", platform = "linux", markers = "platform_machine == 'arm64' or platform_machine == 'arm32'" }
rpi-ws281x-mock = [
  { version = "^0.2.2", platform = "win32" },
  { version = "^0.2.2", platform = "darwin" },
  { version = "^0.2.2", platform = "linux" },
]

[tool.poetry.scripts]
vid2led = "vid2led.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
